--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -1,40 +1,84 @@
+:root {
+    --background: #262626;
+    --color: #afafaf;
+    --title-color: #990000;
+    --buttons-background: #b52424;
+    --buttons-color: #afafaf;
+    --buttons-on-hover-background: #990000;
+    --buttons-on-hover-color: #f7f7f7;
+    --avatar: #757352;
+    --cell-background: #afafaf;
+    --cell-on-hover: #ad4040;
+    ;
+}
+
 body {
-    background: #262626;
-    color: #afafaf;
+    background: var(--background);
+    color: var(--color);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header {
-    text-align: center;
+    text-align: right;
 }
 
-#status {
-    padding: 16px;
-    font-size: 24px;
-    margin: 4px;
-}
-
-.status {
-    height: 30px;
-    color: #262626;
-    transition: all 0.5s ease
+main {
+    overflow-x: hidden;
 }
 
 h1 {
-    font-size: 48px;
+    font-size: 40px;
+    color: var(--title-color);
 }
 
-#buttons {
+i {
+    margin: 0 5px;
+    pointer-events: none;
+}
+
+#splash {
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: var(--background);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    opacity: 1;
+    transition: opacity 1s ease;
+}
+
+#splash.fade-out {
+    opacity: 0;
+}
+
+.logo {
+    width: 90%;
+    height: 30%;
+    margin: 0 auto;
+    background-image: url(../images/Tic_tac_toe-js.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+.buttons-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
-#buttons>button {
-    background-color: #b8ffbb;
+.text-btn {
+    background: var(--buttons-background);
+    color: var(--buttons-color);
     border: none;
-    color: #464646;
-    margin: 24px 0;
+    margin: 24px auto;
     padding: 24px;
     text-align: center;
     text-decoration: none;
@@ -43,14 +87,100 @@ h1 {
     font-weight: bold;
     border-radius: 10px;
     cursor: pointer;
+    width: 80%;
 }
 
-#buttons>button:hover {
-    background-color: #78ff7e;
-    color: #000000;
+.text-btn:hover {
+    background-color: var(--buttons-on-hover-background);
+    color: var(--buttons-on-hover-color);
+}
+
+.icon-btn {
+    width: 45px;
+    height: 45px;
+    background: var(--buttons-background);
+    color: var(--buttons-color);
+    border: none;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 22px;
+    font-weight: bold;
+    border-radius: 100%;
+    cursor: pointer;
+    margin: 4px 8px;
+}
+
+.icon-btn:hover {
+    background-color: var(--buttons-on-hover-background);
+    color: var(--buttons-on-hover-color);
+}
+
+.fa-stack {
+    left: -16px;
+}
+
+#main-panel {
+    height: 90%;
+    background: var(--background);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.8s ease, transform 1s ease-in;
+}
+
+#main-panel.fade-in {
+    opacity: 1;
+}
+
+#main-panel.hide-left {
+    transform: translateX(100%);
 }
 
 #game-panel {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    transform: translateX(-100%);
+    transition: opacity 0.8s ease, transform 1s ease-in;
+}
+
+#game-panel.show-right {
+    transform: translateX(0);
+}
+
+.avatar {
+    width: 60px;
+    height: 60px;
+    margin-top: 2px;
+    border: 3px ridge var(--buttons-background);
+    background: var(--avatar);
+    border-radius: 100%;
+}
+
+#status {
+    padding: 4px 16px;
+    font-size: 24px;
+    margin: 12px 0 6px;
+    text-align: center;
+}
+
+#timer {
+    padding: 4px 0 16px;
+    font-weight: bold;
+    font-size: 32px;
+    text-align: center;
+}
+
+.status {
+    height: 30px;
+    color: #262626;
+    transition: all 0.5s ease
+}
+
+#game-area {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -59,27 +189,30 @@ h1 {
 
 .player-area {
     width: 80%;
-    text-align: center;
-    border: 4px solid #b8ffbb;
-    margin: 8px auto;
+    margin: 4px auto;
     padding: 4px 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border: 5px solid var(--background);
+    transition: border 0.4s ease;
+}
+
+.is-player-turn {
+    border: 5px ridge var(--buttons-background);
 }
 
 .board {
     margin: 0 auto;
     text-align: center;
-}
-
-.avatar {
-    font-size: 32px;
-    margin: 0;
-    padding: 0;
+    width: fit-content;
 }
 
 .name {
     font-size: 24px;
-    margin: 0;
+    margin: 8px 0;
     padding: 0;
+    text-align: center;
 }
 
 .row {
@@ -87,32 +220,33 @@ h1 {
 }
 
 .row>div {
-    min-width: 60px;
-    height: 60px;
-    background: #eee;
+    width: calc(100vw / 4);
+    height: calc(100vw / 4);
+    background: var(--color);
     display: inline-block;
     padding: 10px;
-    font-size: 40px;
+    font-size: calc(100vw / 6);
     margin: 3px;
     cursor: pointer;
-    color: #eee;
+    color: var(--color);
 }
 
 .row>div:hover {
-    background-color: #cee1ff;
-    color: #cee1ff;
+    background-color: var(--cell-on-hover);
+    color: var(--cell-on-hover);
 }
 
 @media (min-width: 600px) {
-    #game-panel {
+    #game-area {
         flex-direction: row;
+        justify-content: space-evenly;
     }
-    #buttons {
-        max-width: 60%;
+    .buttons-container {
+        width: 50%;
         margin: 0 auto;
     }
-    #buttons>button {
-        font-size: 28px;
+    .text-btn {
+        font-size: 24px;
     }
     .row>div {
         font-size: 60px;
@@ -122,6 +256,7 @@ h1 {
     .player-area {
         width: 30%;
         margin: 8px 8px 0;
+        flex-direction: column;
     }
 }
 
